--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Verli & Alex</h1>
             <p>Pertunangan dalam</p>
             <div class="simply-countdown"></div>
-            <a href="#undangan" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
+            <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
         </main>
     </section>
 
@@ -140,22 +140,22 @@
     <div class="row row-cols-md-2 row-cols-sm-2 row-cols-1">
       <div class="col mt-3">
         <a href="img/gallery/HAN08013.jpg" data-toggle="lightbox" data-gallery="mygallery">
-        <img src="img/gallery/thumbnail/HAN08013.jpg" alt="Verli & Alex" class="img-fluid w-100 rounded">
+        <img src="img/gallery/thumbnail/HAN08013.jpg" alt="Verli & Alex" class="img-fluid w-100% rounded">
       </a>
       </div>
       <div class="col mt-3">
         <a href="img/gallery/HAN08223.JPG" data-toggle="lightbox" data-gallery="mygallery">
-        <img src="img/gallery/thumbnail/HAN08223.JPG" alt="Verli & Alex" class="img-fluid w-100 rounded">
+        <img src="img/gallery/thumbnail/HAN08223.JPG" alt="Verli & Alex" class="img-fluid w-100% rounded">
       </a>
       </div>
       <div class="col mt-3">
         <a href="img/gallery/HAN08377.JPG" data-toggle="lightbox" data-gallery="mygallery">
-        <img src="img/gallery/thumbnail/HAN08377.JPG" alt="Verli & Alex" class="img-fluid w-100 rounded">
+        <img src="img/gallery/thumbnail/HAN08377.JPG" alt="Verli & Alex" class="img-fluid w-100% rounded">
       </a>
       </div>
       <div class="col mt-3">
         <a href="img/gallery/HAN08581.JPG" data-toggle="lightbox" data-gallery="mygallery">
-        <img src="img/gallery/HAN08581.JPG" alt="Verli & Alex" class="img-fluid w-100 rounded">
+        <img src="img/gallery/HAN08581.JPG" alt="Verli & Alex" class="img-fluid w-100% rounded">
       </a>
       </div>
     </div>
@@ -284,7 +284,7 @@
         year: 2025, // Target year (required)
         month: 6, // Target month [1-12] (required)
         day: 1, // Target day [1-31] (required)
-        hours: 0, // Target hour [0-23], default: 0
+        hours: 10, // Target hour [0-23], default: 0
         words: { // Custom labels, with lambda for plurals
             days: { root: 'hari', plural: 'hari' },
             hours: { root: 'jam', plural: 'jam' },
