--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-md-12 col-12 text-center">
             <h3>Verliana Novianty, S.Ak</h3>
             <p>Putri kedua dari <br> Tn. Lim Hui Nguan & Ny. The Lie Ciau </p>
-            <button type="button" href="https://www.instagram.com/verli.nvty/" class="btn btn-custom1 bi-instagram"></a>
+            <button type="button" href="https://www.instagram.com/verli.nvty/" target="_blank" class="btn btn-custom1 bi-instagram"></a>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
           <div class="col-md-12 col-12 text-center">
             <h3>Alexander Wijaya, S.kom</h3>
             <p>Putra sulung <br> Tn. Lay Kwet Fong dan Ny. Lie Kui Huang </p>
-            <button type="button" href=https://www.instagram.com/xander.zh/ class="btn btn-custom1 bi-instagram"></a>
+            <button type="button" href=https://www.instagram.com/xander.zh/ target="_blank" class="btn btn-custom1 bi-instagram"></a>
           </div>
         </div>
       </div>
@@ -286,7 +286,7 @@
   </div>
 
   <!-- Overlay Content -->
-  <div class="overlay-content">
+  <div class="overlay-content" data-aos="fade-in">
     <h1 data-aos="fade-in">Thank You</h1>
     <h2 data-aos="fade-in">Verli & Alex</h2>
     <p data-aos="fade-in">Sangjit Ceremony</p>
